--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -27,7 +27,7 @@
   }
 
   @media (min-width: 1200px) {
-    padding: 0 8rem;
+    padding: 0 5rem;
   }
 }
 
