--- a/src/components/Projects/ProjectCard/ProjectCard.module.scss
+++ b/src/components/Projects/ProjectCard/ProjectCard.module.scss
@@ -1,7 +1,7 @@
 .project {
   display: flex;
   flex-direction: column;
-  width: 100%;
+
   gap: 1rem;
 }
 
